[project]
name = "pyboot-commons-async"
version = "1.3.3"                    # 版本顺手+1，避免“文件已存在”
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "joinsunsoft", email = "793875613@qq.com"},
]
maintainers = [{name = "joinsunsoft", email = "inthirties.liu@hotmail.com"}]
requires-python = ">=3.12.10"
keywords = ["web", "framework", "cli", "springboot", "fastapi"]
description="Pyboot-commons-async is an open-source utility package that simplifies the development of async."
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyboot-commons-utils"
    
]

[project.urls]                         # 以前叫 url/homepage
Homepage = "https://github.com/python-boot//commons-async"
Repository = "https://github.com/python-boot//commons-async"
Issues = "https://github.com/python-boot//commons-async"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# py-modules = []          # 清空模块列表
# packages = ["dataflow"]  # 只打包这个包
# packages = [
#     "dataflow",
#     "dataflow.module",
#     "dataflow.module.context",
# ]

[tool.setuptools.packages.find]
where = ["."]                 # 或 ["src"] 如果你用 src-layout
include = ["pyboot*"]       # 把 pyboot 及其所有子包都收进来